--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planning_PrathNancy_Dev</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Planning_PrathNancy_Dev</title>
+</head>
+
+<!-- manifest -->
+
+<!-- Favicons (Desktop) -->
+<link rel="icon" type="image/png" href="/logoPN_512.png">
+<link rel="manifest" href="/manifest.json">
+<link rel="apple-touch-icon" href="/logoPN_512.png">
+<meta name="theme-color" content="#000000">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Calendrier PN">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
