add bootstrap and change icon setting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,10 @@
   <title>Planning_PrathNancy_Dev</title>
 </head>
 
-<!-- manifest -->
+<!-- icon bootstrap -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+<!-- manifest -->
 <!-- Favicons (Desktop) -->
 <link rel="icon" type="image/png" href="/logoPN_512.png">
 <link rel="manifest" href="/manifest.json">
